<resources>
    <string name="app_name">Matbakhna</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_screen">Home Screen</string>
    <string name="favourites_screen">Favourites Screen</string>
    <string name="search_screen">Search Screen</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="textview">Loading ...</string>
    <string name="favoriteborder_icon">favoriteBorder_icon</string>
    <string name="recommended_recipe">Recommended Recipe</string>
    <string name="category">Category</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_please_register">Don\'t have an account? Please register!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="category_txt">Category</string>
    <string name="instructions_title">Instructions</string>
    <string name="recipe_youtube">Youtube</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="details">Details</string>
    <string name="popular_now">Popular Now 🔥</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_results_found">No results Found....</string>
    <string name="github_profile">GitHub Profile</string>
    <string name="copyRights">© 2024 ITI Recipe Project. All rights reserved.</string>
    <string name="categories">Categories</string>
</resources>