<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/white"
    android:backgroundTint="@color/cardBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recipe_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/recipeTitleTextView"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageButton
            android:id="@+id/favoriteIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:contentDescription="@string/favoriteborder_icon"
            android:src="@drawable/baseline_favorite_border_24"
            app:tint="@color/heartColor"
            app:layout_constraintTop_toTopOf="@+id/recipeImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/recipeTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="12dp"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/recipeImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
