<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.details.presentation.views.DetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_image_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline">

        <ImageView
            android:id="@+id/recipe_thumb_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recipe_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_card_view"
        tools:text="Recipe Name" />

    <TextView
        android:id="@+id/recipe_area_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/recipe_dash_text_view"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name_text_view"
        tools:text="Area" />

    <TextView
        android:id="@+id/recipe_dash_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="-"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/recipe_area_text_view"
        app:layout_constraintEnd_toStartOf="@+id/recipe_category_text_view"
        app:layout_constraintStart_toEndOf="@+id/recipe_area_text_view" />

    <TextView
        android:id="@+id/recipe_category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/recipe_area_text_view"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/recipe_dash_text_view"
        tools:text="Category" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_instructions_card_view"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/recipe_area_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/recipe_instructions_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_title"
                android:textSize="18sp" />

            <com.colormoon.readmoretextview.ReadMoreTextView
                android:id="@+id/recipe_instructions_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="4"
                android:textSize="20sp"
                tools:text="Instructions details" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recipe_youtube_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_youtube"
        android:src="@drawable/recipe_youtube_icon"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline" />

    <TextView
        android:id="@+id/recipe_ingredients_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ingredients_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/recipe_instructions_card_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_ingredients_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/recipe_ingredients_title_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>